# kill-port

./: .gitignore  CHANGELOG.md  LICENSE  PACKAGING.md  README.md  __init__.py  cli.py  gui.py  kill-port.spec  main.py  package.py  pyinstaller.spec  pyinstaller_optimized.spec  pyproject.toml  requirements.txt  setup.py  test_cross_platform.py  test_performance.py  test_unit.py
.github/workflows/: build.yml
